Version 0.0.2+dev
- use image nexendrie/php in GitLab CI and phing for testing (in GitLab CI)
- use authoritative classmap with Composer

Version 0.0.2
- added .gitattributes, CONTRIBUTING.md and CHANGELOG

Version 0.0.1
- first version