@@ -3,6 +3,12 @@
   <target name="test" depends="install,lint,cs,phpstan,tests"/>
   <target name="test-coverage" depends="install,lint,cs,phpstan,tests-coverage"/>
   <target name="test-phpdbg" depends="install,lint,cs,phpstan,tests-phpdbg"/>
+  <target name="documentation" depends="install">
+    <exec executable="vendor/bin/generate-site" logoutput="true" passthru="true" checkreturn="true">
+      <arg value="--source=docs"/>
+      <arg value="--output=public"/>
+    </exec>
+  </target>
   <target name="install">
     <exec executable="composer" logoutput="true" passthru="true" checkreturn="true">
       <arg value="install"/>
